# recharge-api-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
recharge/: __init__.py  client.py  exceptions.py  pagination.py  resources.py  retry.py  transport.py  types.py
recharge/api/: __init__.py  addresses.py  async_batches.py  charges.py  checkouts.py  customers.py  discounts.py  metafields.py  notifications.py  onetimes.py  orders.py  products.py  shop.py  subscriptions.py  tokens.py  webhooks.py
recharge/api/v1/: __init__.py  addresses.py  async_batches.py  charges.py  checkouts.py  customers.py  discounts.py  metafields.py  notifications.py  onetimes.py  orders.py  products.py  shop.py  subscriptions.py  tokens.py  webhooks.py
recharge/api/v2/: __init__.py  accounts.py  addresses.py  async_batches.py  bundle_selections.py  charges.py  checkouts.py  collections.py  customers.py  discounts.py  events.py  metafields.py  notifications.py  onetimes.py  orders.py  payment_methods.py  plans.py  products.py  retention_strategies.py  store.py  subscriptions.py  tokens.py  webhooks.py
recharge/model/: base.py
recharge/model/v1/: address.py  async_batch.py  charge.py  checkout.py  customer.py  discount.py  metafield.py  notification.py  onetime.py  order.py  product.py  shop.py  subscription.py  token.py  webhook.py
recharge/model/v2/: account.py  address.py  async_batch.py  bundle_selection.py  charge.py  checkout.py  collection.py  customer.py  discount.py  event.py  metafield.py  notification.py  onetime.py  order.py  payment_method.py  plan.py  product.py  retention_strategy.py  store.py  subscription.py  token.py  webhook.py
scripts/: verify_models.py
tests/: conftest.py  test_client.py  test_pagination.py  test_retry.py
tests/models/: test_pydantic_models.py
tests/v1/: test_charges_v1.py  test_subscriptions_v1.py
tests/v2/: test_addresses_v2.py  test_charges_v2.py  test_collections_v2.py  test_customers_v2.py  test_events_v2.py  test_onetimes_v2.py  test_plans_v2.py  test_webhooks_v2.py
