[project]
name = "recharge-api"
version = "1.6.2"
authors = [
	{ name="ChemicalLuck", email="69787209+ChemicalLuck@users.noreply.github.com" }
]
description = "Python API Client for Recharge"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Testing",
	"Topic :: Utilities"
]
dependencies = ["requests"]

[project.urls]
Homepage = "http://github.com/ChemicalLuck/recharge-api"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
