[project]
name = "recharge-api"
version = "1.18.3"
authors = [
	{ name="ChemicalLuck", email="j.tebbett@outlook.com" }
]
description = "Python API Client for Recharge"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Testing",
	"Topic :: Utilities"
]
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[project.urls]
Homepage = "http://github.com/ChemicalLuck/recharge-api"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
