[metadata]
name = recharge-api
version = 1.6.1
author = ChemicalLuck
description = Python API Wrapper for Recharge
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/ChemicalLuck/recharge-api
license = MIT
keywords = api recharge
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Information Technology
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python :: 3
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Software Development :: Testing
        Topic :: Utilities


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests

python_requires = >=3.11
